--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine on
+<FilesMatch ^((config)\.ini$|logs)$>
+  Order allow,deny
+  deny from all
+</FilesMatch>
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [QSA,L] 
